plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'io.github.ladysnake.chenille' version '0.13.1'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

chenille {
    customLicense = rootProject.file("LICENSE")
    github = new URL("https://github.com/MoriyaShiine/anthropophagy")
    javaVersion = 21
    configurePublishing {
        withLadysnakeMaven()
        withGithubRelease()
        withModrinthRelease()
        withCurseforgeRelease()
    }
}

modrinth {
    dependencies {
        required.project "fabric-api"
        embedded.project "cardinal-components-api"
        embedded.project "midnightlib"
    }
    syncBodyFrom = rootProject.file("README.md").text
}

fabricApi {
    configureDataGeneration()
}

repositories {
    chenille.repositories.ladysnake()
    chenille.repositories.terraformers()
    chenille.repositories.modrinth()
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    modIncludeApi "org.ladysnake.cardinal-components-api:cardinal-components-base:${cardinal_components_version}"
    modIncludeApi "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}"
    modIncludeApi "maven.modrinth:midnightlib:${midnightlib_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"

    modRuntimeOnly "com.terraformersmc:modmenu:${mod_menu_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}